--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+    margin-bottom: 30px;
   }
   
   textarea {
@@ -65,8 +66,16 @@ body {
     color: white;
   }
   
-  .saveBtn i:hover {
+  .saveBtn:hover, .clearBtn:hover {
     font-size: 20px;
     transition: all 0.3s ease-in-out;
   }
   
+  .clearBtn {
+    border-left: 1px solid black;
+    border-radius: 15px;
+    background-color: #06aed5;
+    color: white;
+    font-size: 1rem;
+    padding: 10px;
+  }
