--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
+    margin-bottom: 20px;
   }
   
   textarea {
@@ -10,7 +11,7 @@ body {
     resize: none;
     color: #000000;
     border-left: 1px solid black;
-    padding: 10px;
+    height: 64px;
     width: 100%;     
   }
   
@@ -28,6 +29,9 @@ body {
 
   .col-1 {
     padding: 0;
+    
+    width: 100%;
+    align-content: top;
   }
   
   .col-10 {
@@ -46,14 +50,19 @@ body {
   
   .row {
     white-space: pre-wrap;
-    height: 80px;
+    height: 65px;
     border-top: 1px solid white;
+    width:100%;
+    
   }
   
   .hour {
     background-color: #ffffff;
     color: #000000;
     border-top: 1px dashed #000000;
+    justify-content: center;
+    align-content: center;
+    font-weight: bold;
   }
   
   .past {
@@ -78,9 +87,9 @@ body {
     background-color: #06aed5;
     color: white;
     width: 100%;
-    height: 4rem;
-    /* margin-top: 8px; */
+    height:64px;
     justify-items: right;
+    align-content: top;
   }
   
   .saveBtn:hover, .clearBtn:hover {
